--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -4,28 +4,30 @@
 <link rel="stylesheet" href='{{ "css/list.css" | absURL }}'>
 
 <body>
-  {{ partial "header.html" . }}
-  <main id="main" class="archive">
-    {{ $pages := cond (eq .Section "tags") .Data.Pages .Site.RegularPages }}
-    {{ $pages := where $pages "Type" "==" "posts" }}
-    {{ range $pages.GroupByDate "2006-01" }}
-    <div class="post-group">
-      <h2>{{ dateFormat "January 2006" (printf "%s-01" .Key) }}</h2>
-      <ul>
-        {{ range .Pages }}
-        <li>
-          <a class="link" href={{ .RelPermalink }}>{{ .Title }}</a>
-          <time>{{ .PublishDate.Format "2006-01-02" }}</time>
-        </li>
-        {{ end }}
-      </ul>
-    </div>
-    {{ end }}
-    <div class="post-group">
-      <h2>...</h2>
-    </div>
-  </main>
-  {{ partial "footer.html" . }}
+  <div id="wrapper">
+    {{ partial "header.html" . }}
+    <main id="main" class="archive">
+      {{ $pages := cond (eq .Section "tags") .Data.Pages .Site.RegularPages }}
+      {{ $pages := where $pages "Type" "==" "posts" }}
+      {{ range $pages.GroupByDate "2006-01" }}
+      <div class="post-group">
+        <h2>{{ dateFormat "January 2006" (printf "%s-01" .Key) }}</h2>
+        <ul>
+          {{ range .Pages }}
+          <li>
+            <a class="link" href={{ .RelPermalink }}>{{ .Title }}</a>
+            <time>{{ .PublishDate.Format "2006-01-02" }}</time>
+          </li>
+          {{ end }}
+        </ul>
+      </div>
+      {{ end }}
+      <div class="post-group">
+        <h2>...</h2>
+      </div>
+    </main>
+    {{ partial "footer.html" . }}
+  </div>
 </body>
 
 </html>
