feat: improve website performance

--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
-{{ partial "head.html" . }}
-<link rel="stylesheet" href='{{ "css/index.css" | absURL }}'>
+
+<head>
+  {{ partial "head.html" . }}
+  <link rel="stylesheet" href='{{ "css/index.css" | absURL }}'>
+</head>
 
 <body>
   <div id="wrapper">
@@ -40,6 +43,7 @@
     </main>
     {{ partial "footer.html" . }}
   </div>
+  {{ partial "foot.html" . }}
 </body>
 
 </html>
