--- a/layouts/partials/mathjax.html
+++ b/layouts/partials/mathjax.html
@@ -26,4 +26,4 @@
   };
 </script>
 
-<script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script"></script>
