chore: add to themes.gohugo.io

--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -10,7 +10,7 @@
   <div id="wrapper">
     {{ partial "header.html" . }}
     <main id="main" class="index">
-      {{ $paginator := .Paginate (where .Site.RegularPages "Type" "==" "posts") }}
+      {{ $paginator := .Paginate (where .Site.RegularPages "Type" "==" "post") }}
       {{ range $paginator.Pages }}
       <div class="post">
         <h2>
