--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -11,7 +11,7 @@
     {{ partial "header.html" . }}
     <main id="main" class="archive">
       {{ $pages := cond (eq .Section "tags") .Data.Pages .Site.RegularPages }}
-      {{ $pages := where $pages "Type" "==" "posts" }}
+      {{ $pages := where $pages "Type" "==" "post" }}
       {{ range $pages.GroupByDate "2006-01" }}
       <div class="post-group">
         <h2>{{ dateFormat "January 2006" (printf "%s-01" .Key) }}</h2>
