--- a/static/css/common.css
+++ b/static/css/common.css
@@ -127,6 +127,10 @@ time {
     flex-direction: column;
 }
 
+#header > h1 {
+    text-align: center;
+}
+
 @media screen and (min-width: 768px) {
     #header > h1 {
         font-size: 2.8rem;
