chore: use camel-case config params

--- a/layouts/partials/foot.html
+++ b/layouts/partials/foot.html
@@ -1,5 +1,5 @@
 <!-- custom css -->
-{{ range .Site.Params.custom_css }}
+{{ range .Site.Params.customCSS }}
 <link media="screen" rel="stylesheet" href="{{ . | absURL }}" />
 {{ end }}
 
