--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -22,7 +22,7 @@
 {{ end }}
 
 <!-- mathjax -->
-{{ if .Site.Params.enable_mathjax }}
+{{ if .Site.Params.enableMathjax }}
 {{ partial "mathjax.html" . }}
 {{ end }}
 
