--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -14,6 +14,9 @@
 <meta name="description" content="{{ .Site.Params.description }}">
 {{ end }}
 
+<!-- favicon -->
+<link rel="icon" href="{{ .Site.Params.favicon }}">
+
 <!-- keywords -->
 {{ if .Keywords }}
 <meta name="keywords" content="{{ range $key, $value := .Keywords }} {{ $value }} {{ end }}">
