--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -27,7 +27,11 @@
       </div>
       {{ end }}
       <div class="content">
+        {{ if .Site.Params.enableHanEmph }}
+        {{ .Content | replaceRE "<strong>(\\p{Han}+?)</strong>" "<strong class=chinese>$1</strong>" | safeHTML }}
+        {{ else }}
         {{ .Content }}
+        {{ end }}
       </div>
       <div class="paginator">
         {{ if .PrevInSection }}
