--- a/layouts/partials/mathjax.html
+++ b/layouts/partials/mathjax.html
@@ -3,7 +3,7 @@
   window.MathJax = {
     tex: {
       inlineMath: [['$', '$'], ['\\(', '\\)']],
-      displayMath: [['$$', '$$'], ['\[\[', '\]\]']],
+      displayMath: [['$$', '$$'], ['\\[', '\\]']],
       processEscapes: true,
       processEnvironments: true,
     },
