--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -46,7 +46,19 @@
         {{ end }}
       </div>
       <div class="comment">
+        <!-- disqus -->
         {{ template "_internal/disqus.html" . }}
+        <!-- utterances -->
+        {{ if .Site.Params.utterances.enable }}
+        <script src="https://utteranc.es/client.js"
+                repo="{{ .Site.Params.utterances.repo }}"
+                issue-term="{{ .Site.Params.utterances.issue_term }}"
+                label="{{ .Site.Params.utterances.label }}"
+                theme="{{ .Site.Params.utterances.theme }}"
+                crossorigin="anonymous"
+                async>
+        </script>
+        {{ end }}
       </div>
       {{ end }}
     </main>
