refactor: extract `_default/baseof.html`

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,37 +1,26 @@
-<!DOCTYPE html>
-<html lang="{{ .Site.LanguageCode }}">
+{{ define "head" }}
+<link rel="stylesheet" href='{{ "css/list.css" | absURL }}'>
+{{ end }}
 
-<head>
-  {{ partial "head.html" . }}
-  <link rel="stylesheet" href='{{ "css/list.css" | absURL }}'>
-</head>
-
-<body>
-  <div id="wrapper">
-    {{ partial "header.html" . }}
-    <main id="main" class="archive">
-      {{ $pages := cond (eq .Section "tags") .Data.Pages .Site.RegularPages }}
-      {{ $pages := where $pages "Type" "==" "post" }}
-      {{ range $pages.GroupByDate "2006-01" }}
-      <div class="post-group">
-        <h2>{{ dateFormat "January 2006" (printf "%s-01" .Key) }}</h2>
-        <ul>
-          {{ range .Pages }}
-          <li>
-            <a class="link" href={{ .RelPermalink }}>{{ .Title }}</a>
-            <time>{{ .PublishDate.Format .Site.Params.dateFormat }}</time>
-          </li>
-          {{ end }}
-        </ul>
-      </div>
+{{ define "main" }}
+<main id="main" class="archive">
+  {{ $pages := cond (eq .Section "tags") .Data.Pages .Site.RegularPages }}
+  {{ $pages := where $pages "Type" "==" "post" }}
+  {{ range $pages.GroupByDate "2006-01" }}
+  <div class="post-group">
+    <h2>{{ dateFormat "January 2006" (printf "%s-01" .Key) }}</h2>
+    <ul>
+      {{ range .Pages }}
+      <li>
+        <a class="link" href={{ .RelPermalink }}>{{ .Title }}</a>
+        <time>{{ .PublishDate.Format .Site.Params.dateFormat }}</time>
+      </li>
       {{ end }}
-      <div class="post-group">
-        <h2>...</h2>
-      </div>
-    </main>
-    {{ partial "footer.html" . }}
+    </ul>
   </div>
-  {{ partial "foot.html" . }}
-</body>
-
-</html>
+  {{ end }}
+  <div class="post-group">
+    <h2>...</h2>
+  </div>
+</main>
+{{ end }}
