--- a/layouts/index.html
+++ b/layouts/index.html
@@ -20,7 +20,7 @@
     </div>
     {{ end }}
     <div class="content">
-      {{ if .Site.Params.enableHanEmph }}
+      {{ if .Site.Params.emphasisWithDots }}
       {{ .Summary | replaceRE "<strong>(\\p{Han}+?)</strong>" "<strong class=chinese>$1</strong>" | safeHTML }}
       {{ else }}
       {{ .Summary }}
