feat: enable math on a per-page basis

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -29,7 +29,7 @@
   {{ end }}
 
   <!-- math -->
-  {{ if .Site.Params.math.enable }}
+  {{ if or .Site.Params.math.enable .Params.math }}
   {{ partial "math.html" . }}
   {{ end }}
 
