style: change outdated warning color

--- a/static/css/single.css
+++ b/static/css/single.css
@@ -7,7 +7,7 @@
 }
 
 #main > .warning {
-    background-color: tomato;
+    background-color: brown;
     color: white;
     font-size: 1.1rem;
     padding: 1rem 0;
