style: outdated warning margin-y

--- a/static/css/single.css
+++ b/static/css/single.css
@@ -10,6 +10,7 @@
     background-color: brown;
     color: white;
     font-size: 1.1rem;
+    margin: 2rem 0;
     padding: 1rem 0;
     text-align: center;
 }
